<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">t4jckcs patcher</string>
    <string name="app_desription">consumer key / consumer secret patcher for twitter4j used applications</string>
    <string name="applist_title">select target applications</string>

    <string name="msg_saved">saved!</string>
    <string name="msg_save">SAVE</string>
    <string name="msg_ck_title">consumer key</string>
    <string name="msg_ck_dialog_title">enter consumer key</string>
    <string name="msg_cs_title">consumer secret</string>
    <string name="msg_cs_dialog_title">enter consumer secret</string>
    <string name="msg_target_apps">target applications</string>

    <string name="donation_title">make a donation</string>
    <string name="donation_summary">please support developer, if you like this app.</string>

    <!-- test ck/cs use only oob -->
    <string name="default_value_ck">yN3DUNVO0Me63IAQdhTfCA</string>
    <string name="default_value_cs">c768oTKdzAjIYCmpSNIdZbGaG0t6rOhSFQP0S5uC79g</string>

</resources>
<!--
 ~ t4jckcs patcher Copyright (C) 2014 matsumo All rights reserved.
 ~
 ~ Licensed to the Apache Software Foundation (ASF) under one
 ~ or more contributor license agreements.  See the NOTICE file
 ~ distributed with this work for additional information
 ~ regarding copyright ownership.  The ASF licenses this file
 ~ to you under the Apache License, Version 2.0 (the
 ~ "License"); you may not use this file except in compliance
 ~ with the License.  You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing,
 ~ software distributed under the License is distributed on an
 ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 ~ KIND, either express or implied.  See the License for the
 ~ specific language governing permissions and limitations
 ~ under the License.
 -->
