<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android">
<EditTextPreference
    android:key="defaultCK"
    android:title="@string/msg_ck_title"
    android:dialogTitle="@string/msg_ck_dialog_title"
    android:defaultValue="@string/default_value_ck"
    />
<EditTextPreference
    android:key="defaultCS"
    android:title="@string/msg_cs_title"
    android:dialogTitle="@string/msg_cs_dialog_title"
    android:defaultValue="@string/default_value_cs"
    />
<PreferenceScreen
    android:key="targetApps"
    android:title="@string/msg_target_apps"
    />

<PreferenceCategory android:title="　" >
<PreferenceScreen
    android:key="donation"
    android:title="@string/donation_title"
    android:summary="@string/donation_summary"
    />
</PreferenceCategory>
</PreferenceScreen>
<!--
 ~ t4jckcs patcher Copyright (C) 2014 matsumo All rights reserved.
 ~
 ~ Licensed to the Apache Software Foundation (ASF) under one
 ~ or more contributor license agreements.  See the NOTICE file
 ~ distributed with this work for additional information
 ~ regarding copyright ownership.  The ASF licenses this file
 ~ to you under the Apache License, Version 2.0 (the
 ~ "License"); you may not use this file except in compliance
 ~ with the License.  You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing,
 ~ software distributed under the License is distributed on an
 ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 ~ KIND, either express or implied.  See the License for the
 ~ specific language governing permissions and limitations
 ~ under the License.
 -->
